# focus_guard

./: .gitignore  README.md  coverage.json  debug_llm_creation.py  launch_focusguard.py  pyproject.toml  pytest.ini  run_streamlit_app.py  update_imports.py
.cursor/plans/: mvp_session_plan_d1955737.plan.md
.streamlit/: config.toml
UNUSED/: update_imports.py
UNUSED/PACKAGING/: main.py
UNUSED/browser_extension_deprecated/: demo_collect_tabs.py  focus_guard_native_host.py  tab_server.py  tavb_server_restored_v2  validate_native_host.py
UNUSED/core_backup/: api.py  compat.py
UNUSED/tests_core_backup/: test_api.py  test_compat.py  test_integration.py
admin_ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.packaged.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
admin_ui/e2e/: critical-smoke.spec.ts  helpers.ts  packaged-runtime-smoke.spec.ts  performance-sanity.spec.ts  readiness-degraded.spec.ts  resilience-recovery.spec.ts
admin_ui/src/: main.tsx  router.tsx  styles.css
config/: app_config.json  blocking.json  browser_config.json  credentials.json  enhanced_classification_config.json  focus_guard_config.json  focus_guard_config_template.json  task_profiles.json  user_config_template.json
config/users/: default.json
data/simulation_reports/: local_chaos.json  local_deterministic.json  nightly_chaos_20260215.json  nightly_deterministic_20260215.json
deployment/: README.md
deployment/application/: README.md  WORKFLOW.md
deployment/config/: extension_config.json
deployment/extension/: WORKFLOW.md  debug_chrome_extension.py  install_browser_extension_guided.bat  install_browser_extension_guided.py  install_chrome_manual.py  install_extension_final.bat  install_extension_final.py  install_simple.bat
deployment/installer/: WORKFLOW.md
deployment/tools/: create_test_vm.ps1  deploy.py  testing_guide.md
docs/: ADMIN_CONSOLE_USER_GUIDE.md  ADMIN_DASHBOARD_ISSUE_DIAGNOSIS.md  BUILD_EXE_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  MARKDOWN_FILES_INDEX.md  PRIVACY_POLICY.md  STORE_LISTING.md
docs/core_components/: activity_monitor.md  alert_system.md  app_classifier.md  blocker.md  browser_integration.md  calendar.md  cross_platform.md  distraction_detector.md  domain_classifier.md  (+2 more)
examples/: activity_monitoring_quickstart.py
focus_guard/: main.py
requirements/: USER_SETTINGS_README.md  pyproject.toml  requirements-browser.txt  requirements.txt  setup.py
scripts/: admin_gateway_smoke.py  install_with_robust_extensions.py  mvp_smoke.ps1  run_activity_monitor.py  run_all_tests.py  run_mvp_test_baseline.ps1  run_release_integration_tests.py  test_classification_blocking.py  test_deployment.py  test_edge_policy.py  test_master_budget.py  test_reddit_twitter_classifiers.py  test_search_context.py  test_section8_mitigations.py  test_server_blocking_api.py  test_visible_windows.py  update_imports.py  verify_openai_key.py
test_reports/: integration_test_report_20250908_160316.json  integration_test_report_20250908_173303.html  integration_test_report_20250908_173303.json  integration_test_report_20250908_173432.html  integration_test_report_20250908_173432.json  integration_test_report_20250908_173701.html  integration_test_report_20250908_173701.json  integration_test_report_20250908_173938.html  integration_test_report_20250908_173938.json  integration_test_summary_20250908_173303.csv  integration_test_summary_20250908_173432.csv  integration_test_summary_20250908_173701.csv  integration_test_summary_20250908_173938.csv
(+1324 files in other folders)
