[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-guard-windows"
version = "1.0.0a1"
description = "Windows-only Focus Guard MVP - AI-powered productivity management" 
readme = "README.md"
authors = [
    { name = "Prasun Agarwal", email = "prasun.agarwal@example.com" },
    { name = "Siyona Agarwal", email = "siyona.agarwal@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.8.0",
    "pywin32>=300",
    "aiohttp>=3.8.0",
    "fastapi>=0.110.0",
    "click>=8.0.0",
    "PyQt5>=5.15.0",
    "pydantic>=1.10.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0"
]

ml = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.0.0"
]

gui = [
    "PyQt5>=5.15.0",
    "matplotlib>=3.5.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/focus-guard"
Documentation = "https://focus-guard.readthedocs.io"
Repository = "https://github.com/yourusername/focus-guard"
Issues = "https://github.com/yourusername/focus-guard/issues"

[tool.setuptools]
packages = ["focus_guard"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=focus_guard --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["focus_guard"]
omit = [
    "**/__init__.py",
    "**/tests/**",
    "**/setup.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[project.scripts]
focus-guard = "focus_guard.cli.windows_cli:main"
focus-guard-gui = "focus_guard.gui.windows_tray:main"
